WFPREV-1129 : Shapefile download implementation (#1286)